--- a/src/pages/Clothes.css
+++ b/src/pages/Clothes.css
@@ -14,6 +14,7 @@ img {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
   margin: 0px 20px 20px 0px;
   color: #333;
 }
@@ -22,7 +23,9 @@ img {
   flex-wrap: wrap;
   justify-content: center;
 }
-
+.clothesListCart {
+  height: auto;
+}
 .clothesListCart > img {
   height: 50%;
   width: 80%;
@@ -49,21 +52,9 @@ img {
     width: 75%;
     position: absolute;
     right: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 
   .clothesList {
-    background-color: #ffffff;
-    border-radius: 20px;
-    width: 250px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     margin: 0px 0px 20px 40px;
-    color: #333;
   }
 }
